--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
   gtag('config', 'UA-23042579-10');
 </script>
 
-<style class="cp-pen-styles">* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-*:before, *:after { -webkit-box-sizing: inherit; -moz-box-sizing: inherit; box-sizing: inherit; }
-
-html { background: #000; font: normal 1em/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif; color: #fff; text-align: center; height: 100%; }
-body { height: 100%; }
-
+<style>
 #video-viewport {
   position: absolute;
   width: 100%;
@@ -36,12 +31,11 @@ iframe {
   height: 100%;
 }
 
-h1 { font-family: "Raleway", sans-serif; font-size: 3em; line-height: .9; font-weight: 900; letter-spacing: -.025em; text-transform: uppercase; margin-bottom: .5em; }
-h1 + p { font-family: "Shadows Into Light Two", cursive; font-size: 1.5em;  }
-
-</style></head><body>
+</style>
+<title>Would you like to sample our vegan bacon?</title>
+</head><body>
 	<div id="video-viewport">
-		<iframe class="videoContainer__video" width="100%" height="100%"  src="https://www.youtube-nocookie.com/embed/97ZMFidWy-c?autoplay=1&modestbranding=1&controls=0" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
+		<iframe class="videoContainer__video" width="100%" height="100%"  src="https://www.youtube-nocookie.com/embed/97ZMFidWy-c?autoplay=1&modestbranding=1" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
 	</div>
 <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </body></html>
